# PFS

./: .gitignore  .project  .pydevproject  .pylintrc  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Make_win.py  Makefile  Makefile.rules  README  TODO  azure-pipelines.yml  make.bat  photofilmstrip.iss  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
data/: photofilmstrip.desktop  photofilmstrip.xpm
debian/: changelog  control  copyright  docs  manpages  menu  photofilmstrip-cli.1  photofilmstrip.doc-base  photofilmstrip.xpm  rules  watch
doc/: copyright.html  createpfs.html  index.html  introduction.html  more.html  photofilmstrip.hhc  photofilmstrip.hhp  renderpfs.html
docs/: copyright.html  photofilmstrip.chm  photofilmstrip.hhc  photofilmstrip.hhk  photofilmstrip.hhp
photofilmstrip/: AppMixin.py  CLI.py  Constants.py  GUI.py  PnlStoryGuide.py  __init__.py
po/: Makefile  PhotoFilmStrip.pot  cs.po  de.po  el.po  en.po  es.po  fr.po  it.po  ko.po  nl.po  pt.po  pt_BR.po  ru.po  ta.po  tr.po  uk.po
res/: cmd.txt  generate_icons  patch_4x3  photofilmstrip.desktop  update.txt
scripts/: photofilmstrip  photofilmstrip-auto  photofilmstrip-cli
src/: photofilmstrip-cli.py  photofilmstrip-gui.py
src/cli/: Main.py
tests/: test_geom.py  test_subtitle.py  test_treeitm.py
web/: crossdomain.xml  download.html  features.html  home.html  index.php  links.html  media.html  robots.txt  ss_mainscreen.html  ss_render.html  style.css
win32ExtBin/: README
windows/: photofilmstrip-auto.bat  photofilmstrip-cli.bat  photofilmstrip.bat  photofilmstrip.iss  (+2 more)
(+234 files in other folders)
